# TextStatistics

./: .gitignore  CMakeLists.txt  File.cpp  Folder.cpp  Manager.cpp  README.md  README.txt  TextStatistics.cpp  TextStatistics.h  ThreadPool.cpp  ThreadPool.h
